# navfs

./: .editorconfig  .gitignore  Cargo.toml  README.MD  README.md
example/: text.txt
preview/: preview.mov
src/: main.rs  parse_args.rs  theme.rs  ui_elements.rs
src/ui/: app.rs  mod.rs  utils.rs
src/ui/file_picker/: dir.rs  file_picker.rs  mod.rs  widget.rs
src/ui/popup/: popup.rs
src/ui/preview_pane/: mod.rs  preview_pane.rs
src/ui_elements/: utils.rs
