[package]
name = "navfs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
crossterm = { version = "0.27.0", features = ["event-stream"] }
itertools = "0.13.0"
ratatui = "0.26.3"
users = "0.11.0"
image_ascii = "0.1.1"
image = "0.24.6"
tokio = { version = "1.38.0", features = ["full"] }
color-eyre = "0.6.3"
tokio-util = "0.7.11"
futures = "0.3.30"
